@@ -50,10 +50,10 @@ public class JavaGenerator
                                                         "mediumTimeFormat",
                                                         "longTimeFormat",
                                                         "fullTimeFormat" };
-  private static final String[] classpathZoneOrder = { "zone.short.standard",
-                                                      "zone.long.standard",
-                                                      "zone.short.daylight",
-                                                      "zone.long.daylight" };
+  private static final String[] classpathZoneOrder = { "zone.long.standard",
+                                                      "zone.short.standard",
+                                                      "zone.long.daylight",
+                                                      "zone.short.daylight" };
   private static final String collatorIdentifiers = "<=,;@&!";
 
   /*
