@@ -1,5 +1,16 @@
 2008-06-29  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
+	PR classpath/22851:
+	* src/gnu/localegen/JavaGenerator.java:
+	Fix ordering of zone names.
+	* src/gnu/localegen/Main.java:
+	Update copyright.
+	* src/gnu/localegen/PropertiesGenerator.java,
+	Fix ordering of zone names and include
+	separators to mark missing fields.
+	
+2008-06-29  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
 	* m4/ac_prog_javac.m4:
 	Only display GCJ warning on versions prior to 4.3.
 	
